migdb.qvto/transforms/tests/errors/error_setAbstract_tab_primitive.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_setAbstract_tab_primitive(out inoutModel : ERR);

main(){
	var errorMessage : String := "Structure doesn't contains standardClass called Tab";
	var evolutionError : EvolutionError := _evolutionError(
													1, 
													errorMessage, 
													"evolution_app.qvto");
	_errorLog(OrderedSet{evolutionError});
}